Fix: Adjusted min-width of dialog boxes to avoid overflow and clipping

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -623,7 +623,7 @@ html {
     background-color: var(--drawerColor);
     border-radius: var(--largeRadius) !important;
     border: solid var(--borderColor) var(--borderWidth);
-    min-width: 15em;
+    min-width: 12em;
 }
 
 .dialogBackdropOpened {
